--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,8 +1,7 @@
 name: Build and Deploy to EKS
 
 on:
-  pull_request:
-    branches: [main]
+  workflow_dispatch:
 
 env:
   RELEASE_REVISION: "pr-${{ github.event.pull_request.number }}-${{ github.event.pull_request.head.sha }}"
@@ -17,27 +16,33 @@ jobs:
   release:                                       
     name: Release                                
     runs-on: ubuntu-latest                       
+    
     steps:
     - name: Cancel Previous Runs               
       uses: styfle/cancel-workflow-action@0.4.1
       with:                                    
         access_token: ${{ github.token }} 
+        
     - name: Checkout                                  
       uses: actions/checkout@v2                       
       with:                                           
         ref: ${{ github.event.pull_request.head.sha }}
+        
     - name: Configure AWS credentials                          
       uses: aws-actions/configure-aws-credentials@v1           
       with:                                                    
         aws-access-key-id: ${{ env.AWS_ACCESS_KEY_ID }}        
         aws-secret-access-key: ${{ env.AWS_SECRET_ACCESS_KEY }}
         aws-region: ${{ env.AWS_REGION }}
+        
     - name: Login to Amazon ECR            
       id: login-ecr                        
       uses: aws-actions/amazon-ecr-login@v1
+      
     - name: Set up Docker Buildx                             
       id: buildx                                             
       uses: docker/setup-buildx-action@master                
+      
     - name: Docker cache layers                              
       uses: actions/cache@v2                                 
       with:                                                  
@@ -45,6 +50,7 @@ jobs:
         key: ${{ runner.os }}-single-buildx-${{ github.sha }}
         restore-keys: |                                      
           ${{ runner.os }}-single-buildx          
+          
     - name: Build & Push Image                                                                                      
       env:                                                                                                          
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}                                                       
@@ -62,12 +68,14 @@ jobs:
     
         rm -rf /tmp/.buildx-cache
         mv /tmp/.buildx-cache-new /tmp/.buildx-cache 
+        
     - name: Deploy to Kubernetes cluster                                                                            
       uses: kodermax/kubectl-aws-eks@master                                                                         
       env:                                                                                                          
         RELEASE_IMAGE: ${{ steps.login-ecr.outputs.registry }}/${{ env.ECR_REPOSITORY }}:${{ env.RELEASE_REVISION }}
       with:                                                                                                         
         args: set image deployment/my-pod app=${{ env.RELEASE_IMAGE }} --record -n $KUBE_NAMESPACE           
+        
     - name: Verify Kubernetes deployment                               
       uses: kodermax/kubectl-aws-eks@master                            
       with:                                                            
