--- a/.github/workflows/build-deploy-eks.yml
+++ b/.github/workflows/build-deploy-eks.yml
@@ -45,6 +45,6 @@ jobs:
           KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_DATA }}
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           ECR_REPOSITORY: ${{ env.ECR_REPOSITORY }} 
-          IMAGE_TAG: ${{ github.sha }
+          IMAGE_TAG: ${{ github.sha }}
         with:
           args: set image deployment/$ECR_REPOSITORY $ECR_REPOSITORY=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG          
