--- a/.github/workflows/build-deploy-eks.yml
+++ b/.github/workflows/build-deploy-eks.yml
@@ -4,10 +4,6 @@ on:
   workflow_dispatch:
 
 env:
-  AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-  AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-  AWS_REGION: ${{ secrets.AWS_REGION }}
-  KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_DATA }}
   ECR_REPOSITORY: tasky
 
 jobs:                                            
@@ -39,10 +35,15 @@ jobs:
           docker build -t $REGISTRY/$REPOSITORY:$IMAGE_TAG .
           docker push $REGISTRY/$REPOSITORY:$IMAGE_TAG
 
-      - name: Deploy to Kubernetes cluster                                                                            
-        uses: kodermax/kubectl-aws-eks@master                                                                         
-        env:                                                                                                          
-          RELEASE_IMAGE: ${{ steps.login-ecr.outputs.registry }}/${{ env.ECR_REPOSITORY }}:${{ github.sha }}
-        with:                                                                                                         
-          args: set image deployment/tasky app=${{ env.RELEASE_IMAGE }} --record              
+      - name: Deployment
+        uses: Pablommr/kubernetes-eks@v1.2.0
+        env:
+          KUBE_YAML: deployment.yaml
+          ENVSUBST: true
+          KUBE_ROLLOUT: true
+          IMAGE_TAG: 1.21.6
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          KUBECONFIG: ${{ secrets.KUBE_CONFIG_DATA }}
+          IMAGE: $REGISTRY/$REPOSITORY:$IMAGE_TAG
    
