--- a/.github/workflows/build-deploy-eks.yml
+++ b/.github/workflows/build-deploy-eks.yml
@@ -52,7 +52,7 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           KUBECONFIG: ${{ secrets.KUBE_CONFIG_DATA }}
-          IMAGE: ${{ secrets.KUBE_CONFIG_DATA }}
+          IMAGE: ${{ secrets.IMAGE }}
           MONGODB_URI: ${{ secrets.MONGODB_URI }}
           KUBE_YAML: deployment.yaml
           ENVSUBST: true
