--- a/deployment.yaml
+++ b/deployment.yaml
@@ -29,7 +29,7 @@ spec:
     spec:
       containers:
       - name: tasky
-        image: $IMAGE
+        image: 507453150539.dkr.ecr.us-east-1.amazonaws.com/tasky:ec15b0e0736f7e983af1ff779f7573f6150e6e63
         env:
         - name: MONGODB_URI
           value: $MONGODB_URI
