--- a/.github/workflows/build-deploy-eks.yml
+++ b/.github/workflows/build-deploy-eks.yml
@@ -45,6 +45,15 @@ jobs:
         #   AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         #   KUBECONFIG: ${{ secrets.KUBE_CONFIG_DATA }}
         #   IMAGE: $REGISTRY/$REPOSITORY:$IMAGE_TAG
+      - name: Print name
+        run: echo "Image is $IMAGE ||| secret is ${{secrets.IMAGE}}"
+        env:
+          IMAGE: ${{ secrets.IMAGE }}
+
+      - name: Print name
+        run: echo "MONGODB_URI is $MONGODB_URI ||| secret is ${{secrets.MONGODB_URI}}"
+        env:
+          IMAGE: ${{ secrets.MONGODB_URI }}
 
       - name: Deployment
         uses: Pablommr/kubernetes-eks@v1.2.0
