--- a/deployment.yaml
+++ b/deployment.yaml
@@ -32,7 +32,7 @@ spec:
         image: 507453150539.dkr.ecr.us-east-1.amazonaws.com/tasky:ec15b0e0736f7e983af1ff779f7573f6150e6e63
         env:
         - name: MONGODB_URI
-          value: $MONGODB_URI
+          value: "mongodb://tasky-user:testme123@10.0.1.145:27017/?authSource=admin"
         - name: SECRET_KEY
           value: "TEMP"            
         ports:
