--- a/.github/workflows/build-deploy-eks.yml
+++ b/.github/workflows/build-deploy-eks.yml
@@ -41,13 +41,13 @@ jobs:
         run: echo "LOCAL_IMAGE is ||| secret is ${{env.LOCAL_IMAGE}}"
 
 
-      # - name: Deployment
-      #   uses: Pablommr/kubernetes-eks@v1.2.0
-      #   env:
-      #     AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-      #     AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      #     KUBECONFIG: ${{ secrets.KUBE_CONFIG_DATA }}
-      #     IMAGE: ${{ env.LOCAL_IMAGE }}
-      #     MONGODB_URI: ${{ secrets.MONGODB_URI }}
-      #     KUBE_YAML: deployment.yaml
-      #     ENVSUBST: true
+      - name: Deployment
+        uses: Pablommr/kubernetes-eks@v1.2.0
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          KUBECONFIG: ${{ secrets.KUBE_CONFIG_DATA }}
+          IMAGE: "${{ steps.login-ecr.outputs.registry }}/${{ env.ECR_REPOSITORY }}:${{ github.sha }}"
+          MONGODB_URI: ${{ secrets.MONGODB_URI }}
+          KUBE_YAML: deployment.yaml
+          ENVSUBST: true
